Fixed the problem of overlapping blocks

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -25,7 +25,7 @@ section {
   border: 2px solid rgba(255, 255, 255, 0.25);
   border-radius: 7px;
   position: absolute;
-  height: 800px;
+  height: auto;
   top:50px;
 }
 
